# notme

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  NOTICE  README.md  SECURITY.md  Taskfile.yml  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.beads/: .gitignore  beads.jsonl
.githooks/: commit-msg  post-merge  post-push  pre-commit
.github/workflows/: ci.yml  gha-identity.yml  publish-dpop.yml  test-identity.yml
action/: .npmrc  README.md  action.yml  package-lock.json  package.json  pnpm-lock.yaml
action/src/: index.ts
docs/: README.md
docs/design/: 005-multi-user-identity.md  006-dpop-tokens.md  007-secretless-local-proxy.md  007-secretless-plan.md  008-bridge-cert-csr-wimse.md  009-identity-gated-runtime.md  009-sidecar-proxy.md  010-cross-language-canonical-encoding.md  011-external-oauth-provider.md  012-sender-constrained-oidc.md  012-vault-retirement.md
proxy/: Cargo.toml  README.md
proxy/src/: main.rs
schema/: README.md  identity.capnp
schema/codegen/: capnp-to-ts.ts
scripts/: README.md  check-sha-pins.ts  doc-check.ts
tasks/: release-ts.yml
vault/: NOTICE  README.md  package.json  wrangler.toml.example
vault/src/: crypto.ts  handler.ts  kek-source.ts  rate-bucket.ts  vault.ts  worker.ts
wasm/: README.md
worker/: README.md  THREAT_MODEL.md  config.capnp  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test-e2e.sh  test-local.sh  tsconfig.json  tsconfig.test.json  vitest.config.ts  vitest.workers.config.mts  worker.ts  wrangler.toml.example
worker/e2e/: contract.spec.ts  tsconfig.json
(+69 files in other folders)
